<resources>
    <string name="app_name">Fiszki</string>
    <string name="name">F I S Z K I</string>
    <string name="subTitle">Nauka angielskiego nigdy nie była prostsza</string>
    <string name="learn">Powtarzaj</string>
    <string name="customize">Dostosuj skojarzenia</string>
    <string name="progress">Postęp nauki</string>
    <string name="title_activity_learn_activty">LearnActivty</string>
    <string name="hint">Wprowadź tłumaczenie</string>
    <string name="go">Sprawdź</string>
    <string name="dodaj">DODAJ</string>
    <string name="dodaj_nowe_skojarzenie">Dodaj nowe skojarzenie</string>


</resources>
